test/corpus/quoted_argument.txt
=======================
basic [quoted_argument]
=======================

message("abc")
message( "abc")
message("abc" )

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text))))))

======================
empty [quoted_argument]
======================

message("")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument))))

=================================
escape sequence [quoted_argument]
=================================

message("\n")
message("a\nb")
message(" \n")
message("\n ")
message("\t\r\n\;\ ")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (escape_sequence)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)
          (escape_sequence)
          (text)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)
          (escape_sequence)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (escape_sequence)
          (text)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (escape_sequence)
          (escape_sequence)
          (escape_sequence)
          (escape_sequence)
          (escape_sequence))))))

=================================
normal variable [quoted_argument]
=================================

message("${x}")
message("a${x}b")
message(" ${x}")
message("${x} ")
message("${aA09_.+-\n\t}")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (variable
            (normal_variable
              (variable_content
                (text))))))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)
          (variable
            (normal_variable
              (variable_content
                (text))))
          (text)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)
          (variable
            (normal_variable
              (variable_content
                (text))))))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (variable
            (normal_variable
              (variable_content
                (text))))
          (text)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (variable
            (normal_variable
              (variable_content
                (text)
                (escape_sequence)
                (escape_sequence)))))))))

================================
cache variable [quoted_argument]
================================

message("$CACHE{FOO}")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (variable
            (cache_variable
              (variable_content
                (text)))))))))

======================================
environment variable [quoted_argument]
======================================

message("$ENV{FOO}")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (variable
            (env_variable
              (variable_content
                (text)))))))))

================================
empty variable [quoted_argument]
================================

message("${}")
message("$ENV{}")
message("$CACHE{}")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (variable
            (normal_variable))))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (variable
            (env_variable))))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (variable
            (cache_variable)))))))

=================================
nested variable [quoted_argument]
=================================

message("${foo$CACHE{BAR}$ENV{BA${Z}}}")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (variable
            (normal_variable
              (variable_content
                (text)
                (variable
                  (cache_variable
                    (variable_content
                      (text))))
                (variable
                  (env_variable
                    (variable_content
                      (text)
                      (variable
                        (normal_variable
                          (variable_content
                            (text)))))))))))))))

===================================
variable sequence [quoted_argument]
===================================

message("${foo}${bar}${baz}$\{")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (variable
            (normal_variable
              (variable_content
                (text))))
          (variable
            (normal_variable
              (variable_content
                (text))))
          (variable
            (normal_variable
              (variable_content
                (text))))
          (text)
          (escape_sequence))))))

=====================================
quoted continuation [quoted_argument]
=====================================

message("abc \
def xyz")
message(   "\
x")
message("\
")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)
          (quoted_continuation)
          (text)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (quoted_continuation)
          (text)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (quoted_continuation))))))

====================================
lookalike variable [quoted_argument]
====================================

message("$foo")
message("$CACHEx")
message("$ENV")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)))))
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text))))))

===========================
the raven [quoted_argument]
===========================

message("Once upon a midnight dreary,\
While I pondered, weak and weary,\
Over many a quaint and ${curious}\
Volume of forgotten lore--\
While ${I}${nodded}, ${nearly} napping,\
Suddenly there came a tapping,\
As of some one gently rapping,\
Rapping at my chamber $ENV{door}.\
\"'Tis some visitor,\" I muttered,\
\"Tapping at my chamber door--\
$CACHE{Only} this and nothing more.\"")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)
          (quoted_continuation)
          (text)
          (quoted_continuation)
          (text)
          (variable
            (normal_variable
              (variable_content
                (text))))
          (quoted_continuation)
          (text)
          (quoted_continuation)
          (text)
          (variable
            (normal_variable
              (variable_content
                (text))))
          (variable
            (normal_variable
              (variable_content
                (text))))
          (text)
          (variable
            (normal_variable
              (variable_content
                (text))))
          (text)
          (quoted_continuation)
          (text)
          (quoted_continuation)
          (text)
          (quoted_continuation)
          (text)
          (variable
            (env_variable
              (variable_content
                (text))))
          (text)
          (quoted_continuation)
          (escape_sequence)
          (text)
          (escape_sequence)
          (text)
          (quoted_continuation)
          (escape_sequence)
          (text)
          (quoted_continuation)
          (variable
            (cache_variable
              (variable_content
                (text))))
          (text)
          (escape_sequence))))))

=============================================
variable open before quotes [quoted_argument]
=============================================

message("abc$")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text))))))

======================================================
variable open before escape sequence [quoted_argument]
======================================================

message("abc$\n")

---

(source_file
  (command
    (identifier)
    (argument_list
      (quoted_argument
        (quoted_content
          (text)
          (escape_sequence))))))
